# yarenderer

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  format.sh  run
cmake/Modules/: FindOSMesa.cmake
include/yarenderer/: GL.hh  Layer.hh  Rect.hh  Renderable.hh  Renderable2D.hh  TileLayer.hh  Window.hh  debug.hh
lib/: CMakeLists.txt
src/: CMakeLists.txt  Window.cc  Window.hh  debug.hh  main.cc  yarenderer__config.hh.in
src/buffers/: Buffer.hh  FrameBuffer.cc  FrameBuffer.hh  FrameBufferObject.hh  IndexBuffer.cc  IndexBuffer.hh  RenderBuffer.hh  VertexArray.cc  VertexArray.hh  VertexBuffer.cc  VertexBuffer.hh
src/cameras/: Camera.cc  Camera.hh  OrthographicCamera.cc  OrthographicCamera.hh
src/rendering/: BatchRenderer.cc  BatchRenderer.hh  Layer.cc  Layer.hh  Renderable.cc  Renderable.hh  Renderer.hh  SimpleRenderer.cc  SimpleRenderer.hh  StaticSprite.cc  StaticSprite.hh  VertexData.hh
src/shaders/: Shader.cc  Shader.hh
src/shaders/sources/: basic.frag  basic.vert
src/utils/: FileInput.hh  IO.hh  debug.hh  gl_debug.hh
tests/: CMakeLists.txt  OSContext.cc  OSContext.hh  test_shaders.cc  test_square.cc  test_window.cc
